fixed about me section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </p>
                 <p>
                     Prior professional strengths include Marketing, Digital & Content Strategy, Social Media Management and Project
-                    Management. His previous roles gave him the skills to pay special attention to the User Experience during the development process of my projects,
+                    Management. His previous roles gave him the skills to pay special attention to the User Experience during the development process of his projects,
                     as well as, efficiency at working in teams to create projects.
                 </p>
             </div>
